2009-02-05  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/opendir.c (__alloc_dir): We have a lot more memory
	today than when the original code was written.  Use larger
	buffers.  This also makes it unnecessary to have stat information,
	if this causes extra efforts.
	(__opendir): In case O_DIRECTORY works, don't call fstat just for
	__alloc_dir.

2009-02-03  Andrew Stubbs  <ams@codesourcery.com>

	* sysdeps/sh/sh4/dl-trampoline.S: Only set HAVE_FPU if __SH_FPU_ANY__
	is set.
	* sysdeps/sh/sh4/setjmp.S: Support SH4-NOFPU.
	* sysdeps/sh/sh4/__longjmp.S: Likewise.
	* sysdeps/unix/sysv/linux/sh/sh4/getcontext.S: Likewise.
	* sysdeps/unix/sysv/linux/sh/sh4/setcontext.S: Likewise.
	* sysdeps/unix/sysv/linux/sh/sh4/swapcontext.S: Likewise.
	* sysdeps/unix/sysv/linux/sh/sh4/register-dump.h: Likewise.

2009-02-04  Ulrich Drepper  <drepper@redhat.com>

	* po/ru.po: Update from translation team.

2008-11-17  Nathan Sidwell  <nathan@codesourcery.com>

	* sysdeps/unix/sysv/linux/sparc/bits/siginfo.h (struct sigevent):
	Add _tid slot to maintain consistency with kernel.

2009-02-04  Ulrich Drepper  <drepper@redhat.com>

	* libio/wfileops.c (_IO_wfile_underflow): Fix handling of
	incomplete characters at end of input buffer.
	* libio/Makefile (tests): Add tst-fgetwc.
	* libio/tst-fgetwc.c: New file.
	* libio/tst-fgetwc.input: New file.

2009-02-02  Andrew Stubbs  <ams@codesourcery.com>

	* sysdeps/unix/sysv/linux/sh/Makefile (libm.so-no-z-defs): Define.

2009-02-02  Ulrich Drepper  <drepper@redhat.com>

	[BZ #9793]
	* iconv/gconv_trans.c (__gconv_transliterate): Don't change
	*OUTBUFSTART unless the whole output fit into the buffer.
	* iconv/Makefile (tests): Add tst-iconv4.
	* iconv/tst-iconv4.c: New file.

2009-02-01  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/cacheinfo.c (intel_02_known): Add new descriptors.
	* sysdeps/unix/sysv/linux/i386/sysconf.c (intel_02_known): Likewise.

2009-01-29  Andrew Stubbs  <ams@codesourcery.com>
